# zajac

./: .dockerignore  .gitignore  CHANGELOG-v6-to-v8.md  CLAUDE.md  DEMO.md  NEXT_STEPS.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.a5c/: package.json
.github/: CODEOWNERS
api/: .env.dev  .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/: MASTER_PLAN.md  PHASE_1_5_SCOPE.md  PHASE_2_3_SPEC.md  PRODUCT_SPEC_FINAL.md  merkos-rambam-frontend-spec.md  merkos_rambam_prd_v3.md  merkos_rambam_trd_v1.md  mockup-home.html
frontend/: index.html  package.json  vite.config.ts
infra/: package.json  tsconfig.json
merkos-rambam-frontend/: README.md
pipeline/: .env.example  Dockerfile  alembic.ini  config.yaml  pyproject.toml
pipeline/alembic/: env.py
pipeline/alembic/versions/: 001_initial_pipeline_tables.py  002_phase_1_5_foundations.py
pipeline/prompts/: image_system_prompt.yaml
pipeline/src/pipeline/: __init__.py  artifact_planner.py  config.py  context_synthesizer.py  db.py  dual_transcriber.py  image_generator.py  llm.py  main.py  publisher.py  reconciliation.py  rss_ingester.py  sefaria_client.py  telegram_poster.py  text_aligner.py  vote_manager.py  whatsapp_sender.py
pipeline/tests/: conftest.py  test_config.py  test_dual_transcriber.py  test_image_generator.py  test_llm.py  test_publisher.py  test_rss_ingester.py  test_sefaria_client.py  test_text_aligner.py  test_vote_manager.py
podcast-pipeline/: .env.example  .gitignore  MASTER_PLAN.md  README.md  main.py  (+3 more)
(+127 files in other folders)
